Add KeycloakConfig API
